Remoção de comenta´rios

--- a/SVM_Exemplo_001.ipynb
+++ b/SVM_Exemplo_001.ipynb
@@ -31,7 +31,6 @@
      "output_type": "stream",
      "text": [
       "--- Bibliotecas importadas com sucesso! ---\n",
-      "--- Dataset carregado com sucesso! ---\n",
       "O dataset contém 7043 linhas e 21 colunas.\n"
      ]
     },
@@ -252,25 +251,19 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "# Configurações de visualização\n",
     "sns.set_style('whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (10, 6)\n",
     "\n",
     "print(\"--- Bibliotecas importadas com sucesso! ---\")\n",
     "\n",
     "# Carregar o dataset\n",
-    "# Certifique-se de que o arquivo 'WA_Fn-UseC_-Telco-Customer-Churn.csv' está na mesma pasta do seu notebook\n",
     "try:\n",
     "    df = pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
-    "    print(\"--- Dataset carregado com sucesso! ---\")\n",
     "    print(f\"O dataset contém {df.shape[0]} linhas e {df.shape[1]} colunas.\")\n",
     "except FileNotFoundError:\n",
-    "    print(\"Erro: O arquivo 'WA_Fn-UseC_-Telco-Customer-Churn.csv' não foi encontrado.\")\n",
-    "    print(\"Por favor, verifique o nome e o caminho do arquivo.\")\n",
+    "    print(\"Arquivo não encontrado\")\n",
     "\n",
-    "# Exibir uma amostra dos dados para verificação inicial\n",
-    "if 'df' in locals():\n",
-    "    display(df.head())"
+    "display(df.head())"
    ]
   },
   {
@@ -323,7 +316,7 @@
       "dtypes: float64(1), int64(2), object(18)\n",
       "memory usage: 1.1+ MB\n",
       "\n",
-      "[DIAGNÓSTICO]: Foram encontrados 11 valores não numéricos na coluna 'TotalCharges'.\n",
+      " 11 valores não numéricos na coluna 'TotalCharges'.\n",
       "Estes valores correspondem a clientes novos (tenure=0) e precisam ser tratados.\n",
       "\n"
      ]
@@ -360,25 +353,21 @@
     }
    ],
    "source": [
-    "# Verificar se o DataFrame 'df' existe antes de prosseguir\n",
     "if 'df' in locals():\n",
-    "    # --- Diagnóstico Técnico ---\n",
     "    print(\"--- Informações Gerais do DataFrame ---\")\n",
     "    df.info()\n",
     "\n",
-    "    # --- Diagnóstico Crítico: Inconsistência em 'TotalCharges' ---\n",
-    "    # A análise .info() revela que TotalCharges é um 'object', mas deveria ser numérico.\n",
-    "    # Vamos investigar a causa.\n",
-    "    # Forçamos a conversão para número, e os valores que falharem se tornarão Nulos (NaN).\n",
+    "    # 'TotalCharges' é um 'object', mas deveria ser numérico.   \n",
+    "    # Conversão para número, valores que falharem se tornarão Nulos (NaN).\n",
     "    df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
     "    \n",
     "    # Verificar quantos valores se tornaram nulos.\n",
     "    missing_total_charges = df['TotalCharges'].isnull().sum()\n",
     "    if missing_total_charges > 0:\n",
-    "        print(f\"\\n[DIAGNÓSTICO]: Foram encontrados {missing_total_charges} valores não numéricos na coluna 'TotalCharges'.\")\n",
+    "        print(f\"\\n {missing_total_charges} valores não numéricos na coluna 'TotalCharges'.\")\n",
     "        print(\"Estes valores correspondem a clientes novos (tenure=0) e precisam ser tratados.\\n\")\n",
     "    \n",
-    "    # --- Análise de Negócio com Visualizações ---\n",
+    "    # --- Análise de Negócio\n",
     "    \n",
     "    # Gráfico 1: Distribuição da variável alvo 'Churn'\n",
     "    plt.figure(figsize=(8, 5))\n",
@@ -386,7 +375,7 @@
     "    plt.title('Distribuição de Clientes por Churn', fontsize=14)\n",
     "    plt.ylabel('Quantidade de Clientes')\n",
     "    plt.xlabel('Churn')\n",
-    "    plt.savefig('churn_distribution.png') # Salva a imagem\n",
+    "    plt.savefig('churn_distribution.png') \n",
     "    plt.show()\n",
     "    \n",
     "    # Gráfico 2: Relação entre o tipo de contrato e o Churn\n",
@@ -395,7 +384,7 @@
     "    plt.title('Relação entre Tipo de Contrato e Churn', fontsize=14)\n",
     "    plt.ylabel('Quantidade de Clientes')\n",
     "    plt.xlabel('Tipo de Contrato')\n",
-    "    plt.savefig('churn_by_contract.png') # Salva a imagem\n",
+    "    plt.savefig('churn_by_contract.png') \n",
     "    plt.show()\n",
     "    \n",
     "    # Gráfico 3: Distribuição do tempo de contrato (tenure) por Churn\n",
@@ -404,7 +393,7 @@
     "    plt.title('Distribuição de Tempo de Contrato (Tenure) por Churn', fontsize=14)\n",
     "    plt.ylabel('Quantidade de Clientes')\n",
     "    plt.xlabel('Meses de Contrato (Tenure)')\n",
-    "    plt.savefig('churn_by_tenure.png') # Salva a imagem\n",
+    "    plt.savefig('churn_by_tenure.png') \n",
     "    plt.show()"
    ]
   },
@@ -422,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4a9ebcf9-c8e4-457c-8927-36ae115bd904",
    "metadata": {},
    "outputs": [
@@ -442,7 +431,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aliss\\AppData\\Local\\Temp\\ipykernel_19780\\3201627624.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\aliss\\AppData\\Local\\Temp\\ipykernel_21984\\1601175118.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -453,16 +442,15 @@
     }
    ],
    "source": [
-    "# Verificar se o DataFrame 'df' existe antes de prosseguir\n",
     "if 'df' in locals():\n",
     "    print(\"--- Iniciando Limpeza de Dados ---\")\n",
     "    \n",
     "    # 1. Preencher os valores nulos em TotalCharges com a mediana\n",
     "    median_total_charges = df['TotalCharges'].median()\n",
-    "    df['TotalCharges'].fillna(median_total_charges, inplace=True)\n",
+    "    df['TotalCharges'] = df['TotalCharges'].fillna(median_total_charges)\n",
     "    print(f\"Valores ausentes em 'TotalCharges' preenchidos com a mediana ({median_total_charges}).\")\n",
     "\n",
-    "    # 2. Remover a coluna 'customerID'\n",
+    "    # 2. Remover 'customerID'\n",
     "    df.drop('customerID', axis=1, inplace=True)\n",
     "    print(\"Coluna 'customerID' removida.\")\n",
     "    \n",
@@ -486,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "68dd5db0-a572-43b6-8a95-65d1437216b9",
    "metadata": {},
    "outputs": [
@@ -802,14 +790,10 @@
     }
    ],
    "source": [
-    "# --- 4. Transformação de Dados ---\n",
-    "\n",
-    "# Verificar se o DataFrame 'df' existe antes de prosseguir\n",
     "if 'df' in locals():\n",
     "    print(\"--- Iniciando Transformação de Dados ---\")\n",
     "    \n",
     "    # 1. Codificar a variável alvo 'Churn'\n",
-    "    # Esta etapa pode já ter sido feita, mas garantimos aqui\n",
     "    if df['Churn'].dtype == 'object':\n",
     "        df['Churn'] = df['Churn'].map({'No': 0, 'Yes': 1})\n",
     "    \n",
@@ -817,33 +801,31 @@
     "    X = df.drop('Churn', axis=1)\n",
     "    y = df['Churn']\n",
     "    \n",
-    "    # 3. Identificar os tipos de colunas de forma explícita e robusta\n",
+    "    # 3. Identificar os tipos de colunas\n",
     "    # Colunas numéricas que devem ser escaladas\n",
     "    colunas_numericas = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
     "    \n",
     "    # Colunas categóricas (todas as outras) que devem ser codificadas\n",
-    "    # Esta forma de seleção é mais segura\n",
     "    colunas_categoricas = [col for col in X.columns if col not in colunas_numericas]\n",
     "\n",
     "    print(f\"\\nColunas Numéricas para Padronizar: {colunas_numericas}\")\n",
     "    print(f\"Colunas Categóricas para Codificar: {colunas_categoricas}\")\n",
     "    \n",
-    "    # 4. Construir o pipeline de pré-processamento\n",
+    "    # 4. Pipeline de pré-processamento\n",
     "    preprocessor = ColumnTransformer(\n",
     "        transformers=[\n",
     "            ('numeric_scaler', StandardScaler(), colunas_numericas),\n",
-    "            # Usar drop='if_binary' é uma boa prática para colunas com 2 categorias\n",
     "            ('categorical_encoder', OneHotEncoder(handle_unknown='ignore', drop='if_binary'), colunas_categoricas)\n",
     "        ],\n",
-    "        remainder='passthrough' # Garante que nenhuma coluna seja perdida\n",
+    "        remainder='passthrough' \n",
     "    )\n",
     "    \n",
     "    # 5. Aplicar o pipeline aos dados\n",
     "    X_processed = preprocessor.fit_transform(X)\n",
     "    \n",
-    "    # 6. Criar o DataFrame final (ESTA É A CORREÇÃO PRINCIPAL)\n",
-    "    # Em vez de construir a lista de colunas manualmente, usamos um método do scikit-learn\n",
-    "    # que extrai os nomes corretos diretamente do pipeline ajustado. É muito mais seguro.\n",
+    "    # 6. Criar o DataFrame final \n",
+    "    # Método do scikit-learn\n",
+    "    # que extrai os nomes corretos diretamente do pipeline ajustado. \n",
     "    colunas_finais = preprocessor.get_feature_names_out()\n",
     "    \n",
     "    df_final = pd.DataFrame(X_processed, columns=colunas_finais, index=X.index)\n",
@@ -852,7 +834,7 @@
     "    print(\"Amostra do DataFrame final, pré-processado e pronto para modelagem:\")\n",
     "    display(df_final.head())\n",
     "    \n",
-    "    # Salvar o dataframe processado em um novo arquivo CSV (opcional, mas recomendado)\n",
+    "    # Salvar o dataframe processado em um CSV \n",
     "    df_final_para_salvar = pd.concat([df_final, y], axis=1)\n",
     "    df_final_para_salvar.to_csv('telco_churn_processed.csv', index=False)\n",
     "    print(\"\\nDataFrame final salvo em 'telco_churn_processed.csv'\")"
@@ -869,15 +851,12 @@
     "Este projeto implementou um pipeline de pré-processamento de dados para o dataset \"Telco Customer Churn\". O objetivo foi transformar os dados brutos em um formato limpo, estruturado e adequado para a criação de um modelo preditivo de *churn*.\n",
     "\n",
     "#### **Decisões e Justificativas**\n",
-    "- **Tratamento de `TotalCharges`:** A conversão da coluna `TotalCharges` para formato numérico revelou valores nulos correspondentes a clientes novos. Optou-se por preencher esses valores com a **mediana** da coluna, uma abordagem robusta que minimiza o impacto de valores extremos.\n",
+    "- **Tratamento de `TotalCharges`:** A conversão da coluna `TotalCharges` para formato numérico revelou valores nulos correspondentes a clientes novos. Optou-se por preencher esses valores com a **mediana** da coluna para minimizar o impacto valores extremos.\n",
     "- **Codificação de Categóricos:** Foi utilizado o **One-Hot Encoding** para as variáveis categóricas. Essa técnica foi escolhida por ser ideal para variáveis nominais (sem ordem intrínseca), evitando que o modelo interprete erroneamente uma ordem que não existe. O parâmetro `drop='first'` foi usado para evitar multicolinearidade.\n",
-    "- **Padronização de Numéricos:** As variáveis numéricas foram padronizadas com **StandardScaler**. Isso é fundamental para algoritmos sensíveis à escala (como Regressão Logística ou SVMs), garantindo que todas as features contribuam de forma equilibrada para o resultado.\n",
+    "- **Padronização de Numéricos:** As variáveis numéricas foram padronizadas com **StandardScaler**. Fundamental para algoritmos sensíveis à escala (como Regressão Logística ou SVMs), garantindo que todas as features contribuam de forma equilibrada para o resultado.\n",
     "\n",
-    "#### **Resultado e Próximos Passos**\n",
-    "O pipeline gerou um DataFrame final contendo **45 features** (após o One-Hot Encoding), todas em formato numérico e padronizadas. Este dataset está pronto para ser utilizado na próxima fase do ciclo de vida de Machine Learning: a **modelagem**. Os próximos passos seriam:\n",
-    "1.  Dividir os dados em conjuntos de treino e teste.\n",
-    "2.  Treinar e avaliar diferentes algoritmos de classificação (ex: Regressão Logística, Random Forest).\n",
-    "3.  Otimizar os hiperparâmetros do melhor modelo e implantá-lo para prever o *churn* de clientes em tempo real."
+    "#### **Resultado**\n",
+    "O pipeline gerou um DataFrame final contendo **45 features** (após o One-Hot Encoding), todas em formato numérico e padronizadas. Este dataset está pronto para ser utilizado na próxima fase do ciclo de vida de Machine Learning: a **modelagem**."
    ]
   }
  ],
